# Homework_django

./: .env.example  README.md  catalog_fixture.json  groups_fixture.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog.html  blog_delete.html  home.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_alter_product_image.py  0002_alter_product_options_product_owner_and_more.py  0003_alter_product_options.py
catalog/templates/: category_list.html  contacts.html  home.html  product_detail.html  product_list.html
catalog/templates/catalog/: category_list.html  category_products.html  contacts.html  home.html  product_create.html  product_delete.html  product_detail.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templates/includes/: inc_menu.html
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html
