[tool.poetry]
name = "homework-django"
version = "0.1.0"
description = ""
authors = ["Aleksandr <aqwa06@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
django = "^5.1.2"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
ipython = "^8.28.0"
redis = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
